Add intro paragraph and fix headers

--- a/design-constraints/realistic-constraints.tex
+++ b/design-constraints/realistic-constraints.tex
@@ -1,21 +1,15 @@
-\subsection{Economic Constraints}
-Although different sponsorship options were explored as a source of
-funding for our product, ultimately our team has not received any
-sponsorship for this product. This process will be entirely
-self-funded and evenly divided between the four team members. As a
-result of this, component selection heavily considers unit cost as a
-factor. It follows that the parts selected for this endeavor will meet
-the minimum requirements, but may not have some of the "nice-to-have"
-features one may want from a specific component. 
-\subsection{Time Constraints}
-
+\subsection{Constraints}
+The constraints discussed in the following subsections refer to limitations on the team's ability to design the system. Each section will discuss possible and realized problems with regard to the specific category of constraint. Following the discussion of the problem the team will discuss some possible or implemented solutions.
+\subsubsection{Economic}
+Although different sponsorship options were explored as a source of funding for our product, ultimately our team has not received any sponsorship for this product. This process will be entirely self-funded and evenly divided between the four team members. As a result of this, component selection heavily considers unit cost as a factor. It follows that the parts selected for this endeavor will meet the minimum requirements, but may not have some of the "nice-to-have" features one may want from a specific component. 
+\subsubsection{Time}
 When it comes to time constraints, this project is on a deadline. Most projects are on a deadline in order to ensure the customer can make full use of the project as ordered. In this case, the project is part of a larger organization that runs through business cycles every year. The deadline in place is imposed by the restructuring of the university as a workforce.
 
 An additional time constraint is university leave. As a workforce, UCF mandates that work be suspended for certain occasions, including hurricanes, as we were recently reminded.
 
 Our design process has revolved around flexibility, and as a result we have not been forced to wait in order to acquire the products we need to design our project. However, as the spring approaches and designs become finalized, we will lose this flexibility. 
 
-\subsection{Equipment Constraints}
+\subsubsection{Equipment}
 There are three main equipment constraints on our ability to produce our project. One is limited access to software, another is heavily shared tools, and the third is having facilities to build.
 
 This project arises out of a tradition of problem solving that is used in educational facilities and industries all over the country. A chief part of the College of Engineering and Computer Science program is to teach students to use the tools industry uses to solve the problems industry faces. So far, our team has used multiple integrated development environments, version control platforms, word processers and file viewers, text, video and audio communication services, and software for designing optical beam paths, CAD models of physical structures, and PCB simulations in order to express and determine design features for our project. Each of us has had tools that we would like to have used, but could not, either because of licensing, inexperience, or the need to work cooperatively with the larger team. 
@@ -26,24 +20,17 @@ The third equipment constraint is unique to the nature of this project, but it c
 
 Each of these equipment constraints has a different effect on the project, some of them are easy to get around, by finding open source alternatives to licensed software, by cooperating with other students to get more out of leftover optical components, and by using student networks to determine where and when our group will have space to meet. Some are more difficult, causing us to trade time and money that we would rather not have had to give. In the end, equipment constraints will not likely impact the project deadline or affect the features as laid out in the document.
 
-\subsection{Safety Constraints}
-This project features several threats to human safety that must be addressed. 
-The power subsystem is rated with sufficiently high voltage and current to cause cardiac arrest. The user must be protected from direct exposure to electrical conductors within the system, especially as this is an outdoor system with water management mechanisms which may add to the risk. 
-The optical subsystem involves the use of infrared probes and focusing lenses. If handled carelessly, these could potentially create an eye hazard during testing or product use that the victim would not be able to detect. Steps must be taken to indicate the nature of the threat where it exists. 
-Other risks involved in the project include the chance of a minor cut on a sharp surface becoming infected from exposure to the soil. The structure and components of the project must be sufficiently dull to ensure against the possibility of this. 
+\subsubsection{Safety}
+This project features several threats to human safety that must be addressed. The power subsystem is rated with sufficiently high voltage and current to cause cardiac arrest. The user must be protected from direct exposure to electrical conductors within the system, especially as this is an outdoor system with water management mechanisms which may add to the risk. The optical subsystem involves the use of infrared probes and focusing lenses. If handled carelessly, these could potentially create an eye hazard during testing or product use that the victim would not be able to detect. Steps must be taken to indicate the nature of the threat where it exists. Other risks involved in the project include the chance of a minor cut on a sharp surface becoming infected from exposure to the soil. The structure and components of the project must be sufficiently dull to ensure against the possibility of this. 
 
-\subsection{Environmental Constraints}
-This project features a garden bed, which means that it will be directly engaging with the environment. Potential risks to the environment include project placement disturbing existing ecosystems. This can occur through fertilizer runoff, sound pollution, light pollution, introducing invasive species, poisoning local wildlife, entrapping or injuring animals, or destruction of a natural resource part of the ecosystem relies on.
-Another environmental consideration is the effect this project will have on the environment through engaging human systems such as drawing on the city power and water supply. Our team hopes to use subsystems to mitigate and even eliminate these potential consequences.
+\subsubsection{Environmental}
+This project features a garden bed, which means that it will be directly engaging with the environment. Potential risks to the environment include project placement disturbing existing ecosystems. This can occur through fertilizer runoff, sound pollution, light pollution, introducing invasive species, poisoning local wildlife, entrapping or injuring animals, or destruction of a natural resource part of the ecosystem relies on. Another environmental consideration is the effect this project will have on the environment through engaging human systems such as drawing on the city power and water supply. Our team hopes to use subsystems to mitigate and even eliminate these potential consequences.
 
+\subsubsection{Manufacturability}
+Manufacturability is a set of important criteria for early in the design process to avoid making costly mistakes. There are two reasons a design, once complete, might not be manufacturable. One, the design cannot feasibly be produced. Two, the cost of the design is prohibitive. Our team has protected against cost prohibitive manufacturability issues by ensuring that our component selection is traceable and that each component is in production and within our price range at cost, not due to clearance discounts. Another step our team is taking against future constraints is selecting the bulk of our components and design features before taking steps toward production.  
 
-\subsection{Manufacturability Constraints}
-Manufacturability is a set of important criteria for early in the design process to avoid making costly mistakes. There are two reasons a design, once complete, might not be manufacturable. One, the design cannot feasibly be produced. Two, the cost of the design is prohibitive. 
-Our team has protected against cost prohibitive manufacturability issues by ensuring that our component selection is traceable and that each component is in production and within our price range at cost, not due to clearance discounts. Another step our team is taking against future constraints is selecting the bulk of our components and design features before taking steps toward production.  
-
-\subsection{Ethical Constraints}
+\subsubsection{Ethical}
 Thankfully, our project makes use of institutions and practices that are well within the bounds of ethical behavior. Our garden bed will encourage age old activities that do not threaten the well being of the user or the surrounding community. Our project is designed to accommodate and minimize its environmental impact. Our use of wireless communication is extremely limited in its capability to cause harm to the user or to create a security risk for them or their neighbors. Users who engage with the product will not be able to use it to harm others, knowingly or unknowingly. The product does not in its nature risk damaging any cultural heritage or societies. Our team commits to submit to University policy as regards the goals and activities of this project.
 
-\subsection{Sustainability Constraints}
-Sustainability means creating a system that will produce as much of the resources as it uses so that the system does not collapse. This project does exactly that. The power generation subsystem is intended to ensure that our system does not need to draw on the power grid in order to function correctly. The water detection system is intended to ensure that water is not wasted reirrigating plants that have already been fed by the rain. In a broader sense, our project will increase the wellbeing of people’s lives, producing new plants and possibly food.
-One obstacle to sustainability is power storage. Our system uses a solar panel to collect energy, but that energy needs to be stored in order to distribute it in the right amounts and at the right times. 
+\subsubsection{Sustainability}
+Sustainability means creating a system that will produce as much of the resources as it uses so that the system does not collapse. This project does exactly that. The power generation subsystem is intended to ensure that our system does not need to draw on the power grid in order to function correctly. The water detection system is intended to ensure that water is not wasted reirrigating plants that have already been fed by the rain. In a broader sense, our project will increase the wellbeing of people’s lives, producing new plants and possibly food. One obstacle to sustainability is power storage. Our system uses a solar panel to collect energy, but that energy needs to be stored in order to distribute it in the right amounts and at the right times. 
