--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -74,6 +74,7 @@ be performed with the criteria defined in \autoref{sec:integration_testing}.
 \input{testing/web.tex}
 \input{testing/integration-testing.tex}         % Section 6.5
 \section{Administrative Content}                % Section 7
+This next section will detail our plans for designing and implementing the project. We will review the methodologies that our team has decided to use and give a brief overview of when we plan to complete different parts of the project. Because this is a living document with our project, you will notice that some items from our Fall section were not completed as originally planned and have been marked as so and also moved to the Spring section. We decided to leave the items in Fall as well as any real project would so that future projects can plan their time more accurately. 
 \input{admin-content/milestones.tex}            % Section 7.1 - refine backlog and move here, create gantt chart
 \input{admin-content/finance.tex}               % Section 7.2 - update finances what was budgeted versus what was spent
 \end{document}
