--- a/design-constraints/realistic-constraints.tex
+++ b/design-constraints/realistic-constraints.tex
@@ -1,13 +1,28 @@
 \subsection{Constraints}
-The constraints discussed in the following subsections refer to limitations on the team's ability to design the system. Each section will discuss possible and realized problems with regard to the specific category of constraint. Following the discussion of the problem the team will discuss some possible or implemented solutions.
+The following section nwill cover specific limitations, or constraints, the team has and will face during the project timeline. These restraints have affects on our ability to design specific syst4ems and limits our options when designing different parts of the product. The following are our constraints: economic, time, equipment, safety, environmental, manufacturability, ethical, and sustainability. Each section will discuss possible and realized problems with regard to the specific category of constraint. After explaining and detailing each constraint, we will expolore different solutions that we could use to overcome any barriers. Some problems may not occur for the team, but we want to be prepared for any constraints that may arise. 
 \subsubsection{Economic}
-Although different sponsorship options were explored as a source of funding for our product, ultimately our team has not received any sponsorship for this product. This process will be entirely self-funded and evenly divided between the four team members. As a result of this, component selection heavily considers unit cost as a factor. It follows that the parts selected for this endeavor will meet the minimum requirements, but may not have some of the "nice-to-have" features one may want from a specific component. 
+The first major constraint that we expected and have already begun to face is economic. We considered and looked for different sponsorhip options for this project, but unfortunately our team was unable to secure a sponsorship. Our funding for the project will be entirely self-funded and evenly divided between the four team members. As a result of being funded entirely out-of-pocket, cost has been and will continue to be a driving factor in the materials and components our team decides to use for the product. When analyzing various parts and materials for the product, ideally, we would choose the best available, but when budgeting for both us and the consumers we plan to serve, we plan to maximize specifications and requirements while minimizing the cost. This means our product may not have all the "nice-to-have" features and will instead have features to make it perform just enough to be competitive in the market we are designing the product for.  \\
+
+Another hurdle that the economy brings to this project is the availability of certain parts. Manufacturers across the world have been drastically impacted by the economy over the last few years making nvarious products unavailable, hard to get, or more expensive than ever before. We excpect to spend more time comparing components because of lack of availability compared to the pricing of such parts. Lack of availability of certain components will also affect the final outcome of our product because we may not be able to get the exact parts we want as part of our design to meet time requirements for the project.\\
+
+We have run in to the problem of availability with products on multiple occasions. An example of this is when we were looking for charge controllers from the manufacturere Analogue Devices. We were originally looking at the charge controller "Power Tracking 2A Battery Charge for Solar Power (LT3652), but quickly found that it was unavailable. This specific option for a charge controller was an ideal option because of its pricepoint and specifications. Our product only needs 5V to operate so when looking for a component we were looking to meet just about our needs. Our second choice was through TI which had a minimum of 5V and max of 28V, but again ran in to the issue that the component was not available. We are now considering two other options that are more expensive, have higher voltage, and offer other features such as tilemetry, and a low-loss power path that we do not need for our product.
+%to-do: lo-loss power path in last sentence is a trademark. section below this comment is a part of the paragraph above. new paragraph begins with "The side effects"
+
+Not only are we being forced to select something more than needed, but this will cause future restraints on components remaining in budget and has delayed time because of the extra time spent searching for products available that meet our requirements.\\
+
+The side effects of our budget and product availability in the economy is also affected by the inflation rates. Not only could we run in to the problem of not having a product readily available to meet our needs, but inflation could also cause a component to fall outside of our budget. \\
+
+In order to combat this restraint, we have looked at future products we may need and have been considering differnt options ahead of time. This will allow us to plan ahead and order products for future parts of the project now so we do not have to wait on them later. \\
 \subsubsection{Time}
-When it comes to time constraints, this project is on a deadline. Most projects are on a deadline in order to ensure the customer can make full use of the project as ordered. In this case, the project is part of a larger organization that runs through business cycles every year. The deadline in place is imposed by the restructuring of the university as a workforce.
+Most projects share several different constraints. One of the constraints that will be found with every product is the restraint of time. Customers always want the next product and teams need various resources made on a deadline. For this project, we are on a timeline to complete the project, and various iterations, with the semester. Most projects revolve around the deadline that meets a customers' needs. In this case, the project is part of a larger organization that runs through business cycles every year. The deadline in place is imposed by the restructuring of the university as a workforce.\\
 
-An additional time constraint is university leave. As a workforce, UCF mandates that work be suspended for certain occasions, including hurricanes, as we were recently reminded.
+Not only is the project restricted on a semesterlyn timeline, but the project also relies on the schedule set forth by the university. We recently experienced a time constraint when a hurricane came through Orlando. Not only did the university close, but some of our team members lost power and were unable to work during this time. Additionally, the university will close over the holidays limiting resources and ability to make some decisions to progress the project. \\
 
-Our design process has revolved around flexibility, and as a result we have not been forced to wait in order to acquire the products we need to design our project. However, as the spring approaches and designs become finalized, we will lose this flexibility. 
+As all parts of this project correlate with each other, so do our restraints. Ealier we discussed that some products have limited, or no, availability, This further pressurizes the time restraint we have because of product delays. We have already been delayed by certain products being available and have polans to look further into our project design to try and avoid further delays with shipping and manufacturing. \\
+
+Another factor that affects the timing of our project, is our own availability. Each of our team members have various projects and responsibilities, and we work together to find time that works for everyone on the team. Sometimes our schedules do not align and causes us to push our meetings back a day or two. This is something we have been working around by communicating regularly through Discord even if we have not been able to meet face to face.\\
+
+Since we know we have another semester working on this project, we have had more flexibility this semester to move things where needed in our project timeline. The closer we get to the deadline, the less flexibility we will have with our time. Because we recognize this restraint now, we have discussed this topic and allowed for time to make changes in the future by making as much progress now as possible.\\ 
 
 \subsubsection{Equipment}
 There are three main equipment constraints on our ability to produce our project. One is limited access to software, another is heavily shared tools, and the third is having facilities to build.
@@ -21,16 +36,27 @@ The third equipment constraint is unique to the nature of this project, but it c
 Each of these equipment constraints has a different effect on the project, some of them are easy to get around, by finding open source alternatives to licensed software, by cooperating with other students to get more out of leftover optical components, and by using student networks to determine where and when our group will have space to meet. Some are more difficult, causing us to trade time and money that we would rather not have had to give. In the end, equipment constraints will not likely impact the project deadline or affect the features as laid out in the document.
 
 \subsubsection{Safety}
-This project features several threats to human safety that must be addressed. The power subsystem is rated with sufficiently high voltage and current to cause cardiac arrest. The user must be protected from direct exposure to electrical conductors within the system, especially as this is an outdoor system with water management mechanisms which may add to the risk. The optical subsystem involves the use of infrared probes and focusing lenses. If handled carelessly, these could potentially create an eye hazard during testing or product use that the victim would not be able to detect. Steps must be taken to indicate the nature of the threat where it exists. Other risks involved in the project include the chance of a minor cut on a sharp surface becoming infected from exposure to the soil. The structure and components of the project must be sufficiently dull to ensure against the possibility of this. 
+This project features several threats to human safety that must be addressed. The power subsystem is rated with sufficiently high voltage and current to cause cardiac arrest. The user must be protected from direct exposure to electrical conductors within the system, especially as this is an outdoor system with water management mechanisms which may add to the risk. The optical subsystem involves the use of infrared probes and focusing lenses. If handled carelessly, these could potentially create an eye hazard during testing or product use that the victim would not be able to detect. Steps must be taken to indicate the nature of the threat where it exists. Other risks involved in the project include the chance of a minor cut on a sharp surface becoming infected from exposure to the soil. The structure and components of the project must be sufficiently dull to ensure against the possibility of this. \\
+
+Recognizing the improtance of our team's safety now allows us to think through different precautions we can take when building and testing the product. One precaution our team plans to utilize is personal protection equipment and understanding the tools we will utilize. We will also ensure that we are using proper tools for different jobs. We will discuss as a team with each other to know what tools we have and potential items needed to purchase to ensure we have the right equipment for the job. Taking inventory of this now will also allow us to budget any tools in as needed. We will also plan accordingly on when to bring professionals in for various needs. For example, no one on our team is trained to cut and bend the garden materials on the extorior so we plan to utilize campus resources and personal connections to ensure we get the job done correctly and safely. \\
 
 \subsubsection{Environmental}
-This project features a garden bed, which means that it will be directly engaging with the environment. Potential risks to the environment include project placement disturbing existing ecosystems. This can occur through fertilizer runoff, sound pollution, light pollution, introducing invasive species, poisoning local wildlife, entrapping or injuring animals, or destruction of a natural resource part of the ecosystem relies on. Another environmental consideration is the effect this project will have on the environment through engaging human systems such as drawing on the city power and water supply. Our team hopes to use subsystems to mitigate and even eliminate these potential consequences.
+Our product features our consumers utilizing a garden bed which directly engages with the environment. Because our product is doing this, there are environmental factors that our team must consider. Although we are not directly pouring soil into each customer's garden bed, we know that different fertilizers will be purchased and used to fill our products. This has potential of disturbing ecosystems, even if it was through the butterfly effect. Additionally, we will need to consider the risk of pollution our batteries and materials cause on the environment. When we discuss the marketing requirements, we also consider the environmental impact because we know our consumers will care about this factor. We also have to consider the fertilizer runoof, sound pollution, and light pollution that could occur as a result of our project.\\
+
+To consider the impact we could have on the economy, we are also taking careful consideration in the components and materials we will use for our product. The component that will have one of the larger impacts on this rest5raint is our battery. Many of the other components and parts can be re-used, but batteries do not have the same type of use after the product is retired. This is also a reason we decided to make our product solar. We want it to last as long as possible and use less energy where it can. Not only are we considering performance standards of various components, but also the lasting impact these aprts will have on our environment for years following. The logner we can make our product last and the better, the less that will negatively impact the environment. 
+
 
 \subsubsection{Manufacturability}
-Manufacturability is a set of important criteria for early in the design process to avoid making costly mistakes. There are two reasons a design, once complete, might not be manufacturable. One, the design cannot feasibly be produced. Two, the cost of the design is prohibitive. Our team has protected against cost prohibitive manufacturability issues by ensuring that our component selection is traceable and that each component is in production and within our price range at cost, not due to clearance discounts. Another step our team is taking against future constraints is selecting the bulk of our components and design features before taking steps toward production.  
+Manufacturability is a set of important criteria for early in the design process to avoid making costly mistakes. When originally selecting our project, we wanted to make sure that whatever project we selected would be achievable and able to be built. For this project, we had to ensure that building the garden bed would be something feasible for our team and the resources we had available to us. We considered the two reasons that could cause a product to potentially not be manufacturable. The first one is that the design is too complex to be completed. This could be caused by any number of reasons within the design. We considered all the other constraints that have been discussed and whether those constraints would further constrain nthe manufacturability of the garden bed. The second reason relates back to the cost restraint. We had to budget and determine if we would be able to fund all the requirements to build out the entire product, and account for variability. \\
+
+Our team has protected against cost prohibitive manufacturability issues by ensuring that our component selection is traceable and that each component is in production and within our price range at cost, not due to clearance discounts. Another step our team is taking against future constraints is selecting the bulk of our components and design features before taking steps toward production.  
 
 \subsubsection{Ethical}
-Thankfully, our project makes use of institutions and practices that are well within the bounds of ethical behavior. Our garden bed will encourage age old activities that do not threaten the well being of the user or the surrounding community. Our project is designed to accommodate and minimize its environmental impact. Our use of wireless communication is extremely limited in its capability to cause harm to the user or to create a security risk for them or their neighbors. Users who engage with the product will not be able to use it to harm others, knowingly or unknowingly. The product does not in its nature risk damaging any cultural heritage or societies. Our team commits to submit to University policy as regards the goals and activities of this project.
+When considering the ethics behind any project, this project made our ethical constraint easier. We know that the negative impact will be outweighed by the positives our design brings to any market. Not only does our product encourage consumers to grow their own vegetables, or plants, it will also bring a mindfulness to many lives. There are countless studies that show the benefits of being outside and tending to a garden, and this project enables that behavior. Our garden bed will encourage age old activities that do not threaten the well being of the user or the surrounding community. Our project is designed to accommodate and minimize its environmental impact. Beyond the environmental ethics, we also considered user data and security of the product. Because of the wireless communication system we are designing and the information it needs to work, we have drastically limited security risks for the consumer and surrounding neighbors. There is also minimal room for any harm to come to the consumers. Consumers that engage with the product will not be able to use it to harm others, knowindly or unknowingly. The product is also open to any consumer to utilize and does not risk damaging ay cultural heritage or societies. The garden bed can be used by anyone who decides to purchase it.  Our team commits to submit to University policy as regards the goals and activities of this project.
 
 \subsubsection{Sustainability}
-Sustainability means creating a system that will produce as much of the resources as it uses so that the system does not collapse. This project does exactly that. The power generation subsystem is intended to ensure that our system does not need to draw on the power grid in order to function correctly. The water detection system is intended to ensure that water is not wasted reirrigating plants that have already been fed by the rain. In a broader sense, our project will increase the wellbeing of people’s lives, producing new plants and possibly food. One obstacle to sustainability is power storage. Our system uses a solar panel to collect energy, but that energy needs to be stored in order to distribute it in the right amounts and at the right times. 
+Sustainability means creating a system that will produce as much of the resources as it uses so that the system does not collapse. An example of this is when we were deciding what materials to make the structure out of. We wanted to maximize life of the product without hindering our budget. We found that aluminum meets several consumer requirements, as well as our other project restraints. Aluminum is also more sustainable than some other materials, such as wood, that were involved in the discussion. Another point for sustainability that we have considered is both battery life and the life of the solar panels. We want to find a balance between the life and cost of these components. Additionally, we hope to have them integrated in a way that when they need to be replaced, the consumer is not forced to replace the entire product, but only the ones that are beyond their useful life. \\
+
+Beyond product life sustainability, we also considered other factors. The power generation subsystem is intended to ensure that our system does not need to draw on the power grid in order to function correctly. This will lower the impact on both the environment and how well the product can sustain itself. We also considered the water detection to ensure accuracy so that water is not wasted. The sensors and system will minimize water waste by only watering when needed and at appropriate times before or after sunshine. \\
+
+In a broader sense, our project will increase the wellbeing of people’s lives, producing new plants and possibly food. One obstacle to sustainability is power storage. Our system uses a solar panel to collect energy, but that energy needs to be stored in order to distribute it in the right amounts and at the right times. We will be selecting our battery carefully and minimizing the waste of this as much as possible.
