Initial addition of references files

--- a/design-constraints/standards.tex
+++ b/design-constraints/standards.tex
@@ -41,7 +41,7 @@ is shown in \autoref{tcp_frame}.
 
 \subsubsection{IPv4} IPv4 is the fourth version of the Internet Protocol, a network layer protocol in use to relay data between devices and across networks. The data relayed, datagrams, are sent between sources and hosts that are identified by 32-bit addresses. This protocol strictly functions to transport the datagram from one device to another, with no end-to-end reliability, flow control, sequencing, or other measures found in other protocols such as TCP. IPv4 provides two distinct features: fragmentation of whole datagrams, and addressing of devices. A standard IPv4 frame is shown in \autoref{ipv4_frame}.
 \begin{figure}[H]
-    \caption{IPv4 frame (\href{https://dx.doi.org/10.17487/RFC0791}{RFC 791, Internet Protocol, DARPA Internet Program Protocol Specification}, Fig. 1)}
+    \caption{IPv4 frame (\href{https://dx.doi.org/10.17487/RFC0791}{RFC 791, Internet Protocol, DARPA Internet Program Protocol Specification}, Fig. 1) \cite{Postel1981}}
     \label{ipv4_frame}
     \centering
     \includegraphics[width=\textwidth]{images/ipv4_frame.png}
