--- a/InitialDocument.tex
+++ b/InitialDocument.tex
@@ -20,7 +20,8 @@
     colorlinks=true,
     linkcolor=black,
     filecolor=blue,      
-    urlcolor=blue}
+    urlcolor=blue,
+    citecolor=black}
 \begin{document}
 \include{Title.tex}
 \pagenumbering{gobble}
@@ -77,4 +78,5 @@ be performed with the criteria defined in \autoref{sec:integration_testing}.
 \section{Administrative Content}                % Section 7
 \input{admin-content/milestones.tex}            % Section 7.1 - refine backlog and move here, create gantt chart
 \input{admin-content/finance.tex}               % Section 7.2 - update finances what was budgeted versus what was spent
+\input{references/references.tex}               % References
 \end{document}
