--- a/design-constraints/standards.tex
+++ b/design-constraints/standards.tex
@@ -10,7 +10,7 @@ communication. This standard uses the S band of radio frequences and
 operates at 2.4 GHz. There are 14 accessible channels, each spanning a band
 width of 22 MHz (pictured in \autoref{wifi_channels}).
 \begin{figure}[H]
-    \caption{802.11b/g/n channels}
+    \caption{802.11b/g/n channels \cite{Flickenger}}
     \label{wifi_channels}
     \centering
     \includegraphics[width=\textwidth]{images/wifi_channels.png}
@@ -32,7 +32,7 @@ latency, as neither of the latter are required for the kilobytes
 of information being relayed between AWS and the MCU. A standard TCP frame
 is shown in \autoref{tcp_frame}.
 \begin{figure}[H]
-    \caption{TCP frame (\href{https://condor.depaul.edu/jkristof/technotes/tcp.html}{The Transmission Control Protocol}, Fig. 1)}
+    \caption{TCP frame \cite{Kristoff}}
     \label{tcp_frame}
     \centering
     \includegraphics[width=\textwidth]{images/tcp_frame.jpg}
@@ -41,7 +41,7 @@ is shown in \autoref{tcp_frame}.
 
 \subsubsection{IPv4} IPv4 is the fourth version of the Internet Protocol, a network layer protocol in use to relay data between devices and across networks. The data relayed, datagrams, are sent between sources and hosts that are identified by 32-bit addresses. This protocol strictly functions to transport the datagram from one device to another, with no end-to-end reliability, flow control, sequencing, or other measures found in other protocols such as TCP. IPv4 provides two distinct features: fragmentation of whole datagrams, and addressing of devices. A standard IPv4 frame is shown in \autoref{ipv4_frame}.
 \begin{figure}[H]
-    \caption{IPv4 frame (\href{https://dx.doi.org/10.17487/RFC0791}{RFC 791, Internet Protocol, DARPA Internet Program Protocol Specification}, Fig. 1) \cite{Postel1981}}
+    \caption{IPv4 frame \cite{Postel1981}}
     \label{ipv4_frame}
     \centering
     \includegraphics[width=\textwidth]{images/ipv4_frame.png}
