final push for new content

--- a/design-details/sensing.tex
+++ b/design-details/sensing.tex
@@ -90,7 +90,7 @@ This means the spread of the diffracted light will be 38 degrees in and 21 degre
 \end{figure}
 
 
-\paragraph{Circuitry} The Photodiode works by converting a small portion of the incident light into electrical current across the face of the semiconductor. There are three components to the sensing circuitry. First, there is a voltage divider. This voltage divider provides a clean and stable $3.3V/2$ to the anode of the photodiode. From there the team will use a 1M$\Omega$ resistor to and an op-amp to convert current to voltage to get a current resolution of 1 $\mu$A/V.
+\paragraph{Circuitry} The Photodiode works by converting a small portion of the incident light into electrical current across the face of the semiconductor. There are three components to the sensing circuitry. First, there is a voltage divider. This voltage divider provides a clean and stable 1.65V to the anode of the photodiode. The photodiode is reversed bias to create a current when detecting light. From there the second part of the circuit begins which is a current-to-voltage converter. The photodiode is emitting a current based on the power of light that is hitting the surface per the area that it is hitting. Using a 100 M$\Omega$ resistor converts current to voltage at a rate of 1 pA to 100 $\mu$V. There are two issues with this however, first the ADC only has 12-bits and as discussed in the controller section, this results in about half a milli-Volt per step. This means that the system is losing about 4x the resolution of the sensor. This is where the last part, the instrumentation amplifier takes effect. The instrumentation amplifier will take the difference between the voltage output and a reference voltage and scale all the parts. For example, if the output voltage of the current-to-voltage converter is .3V (which happens to be the dark current of the visible light sensor) subtract the voltage of the dark current and scale the remainder will help.
 \begin{figure}[H]
     \caption{Sensing Schematic}
     \centering
