--- a/design-details/power.tex
+++ b/design-details/power.tex
@@ -1,6 +1,6 @@
 \subsection{Power Subsystem}
 \label{sec:power_subsystem}
-The power system is an important part to any electrical device or component that requires any amount of power. It simply starts from a power source such as a battery or wall outlet then is converted into energy to operate what is being used. At the minimum this model is designed to be an independent system, having the capability to operate on its own. The way that can be achieved is through solar power. \par
+The power system is an important part to any electrical device or component that requires any amount of power. Most often, it starts from a power source such as a battery or wall outlet then is converted into energy to operate what is being used. At the minimum, this model is designed to be an independent system, having the capability to operate on its own. The way that can be achieved is through solar power. \par
 Solar power has been such a strong growing source of energy and will play a vital role in our system. Power is collected through the solar panels and then regulated through the charge controller to ensure that the battery is receiving the correct amount of charge. The power is regulated through the charge controller so that the battery is not being over charge, which could potentially damage it and reduce the battery life in the future. It is then stored in a battery when the system is not operating and then utilized when needed. From there, voltage needs to be regulated again throught the voltage regulator for the microcontroller and other components that require different amounts of voltage. The block diagram in \autoref{fig:power-block-diagram} shows the flow of power through the system. 
 
 \begin{figure}[H]
